--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Play 2048" />
+    <meta name="description" content="2048-NN" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,7 +21,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Play 2048</title>
+    <title>2048-NN</title>
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta
+      name="viewport"
+      content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+    />
+
+    <meta property="og:title" content="2048-NN" />
+    <meta property="og:site_name" content="2048-NN" />
+    <meta
+      property="og:description"
+      content="You can play 2048 by yourself or with the help of NN. This trained model can achieve 2048+ in > 94%, 4096+ in > 78% and 8192+ in > 34% of the games."
+    />
+    <meta property="og:image" content="/meta/og_image.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
