--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <meta property="og:site_name" content="2048-NN" />
     <meta
       property="og:description"
-      content="You can play 2048 by yourself or with the help of NN. This trained model can achieve 2048+ in > 94%, 4096+ in > 78% and 8192+ in > 34% of the games."
+      content="You can play 2048 by yourself or with the help of NN. The trained model can achieve 2048+ in > 94%, 4096+ in > 78% and 8192+ in > 34% of the games."
     />
     <meta property="og:image" content="/2048/meta/og_image.png" />
   </head>
